# cells

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
game/: cell.cpp  cell.h  entity.h  food.cpp  food.h
include/: app.h
include/game/: cell.h  entity.h  food.h
include/objects/: world.h
include/utils/: generic.h  geometry.h
objects/: world.cpp  world.h
src/: app.cpp  main.cpp
src/game/: cell.cpp  food.cpp
src/objects/: world.cpp
src/utils/: generic.cpp  geometry.cpp
utils/: geometry.cpp  geometry.h
